tests/neg-macros/i6436.check
<<<<<<< HEAD
-- Error: tests/neg-macros/i6436.scala:5:9 -----------------------------------------------------------------------------
5 |    case '{ StringContext(${Varargs(parts)}*) } => // error
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         no implicit argument of type scala.quoted.Quotes was found
━━┳━ [E006] Not Found Error: tests/neg-macros/i6436.scala:6:34 -----------------------------------------------------------
6 |      val ps: Seq[Expr[String]] = parts // error
  |                                  ^^^^^
  |                                  Not found: parts
<<<<<<< HEAD
  |
  | longer explanation available when compiling with `-explain`
=======
  |---------------------------------------------------------------------------------------------------------------------
  | longer explanation available when compiling with `-explain`
  ·---------------------------------------------------------------------------------------------------------------------
>>>>>>> 0958dc5505 (Improve -explain rendering)
=======
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ Error: tests/neg-macros/i6436.scala:5:9
└─┬────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
5 │    case '{ StringContext(${Varargs(parts)}*) } => // error
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         no implicit argument of type scala.quoted.Quotes was found
  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ [E006] Not Found Error: tests/neg-macros/i6436.scala:6:34
└─┬────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
6 │      val ps: Seq[Expr[String]] = parts // error
  │                                  ^^^^^
  │                                  Not found: parts
  ╞════════════════════════════════════════════════════════════════════════════════════════════════════════════════════
  │ longer explanation available when compiling with `-explain`
  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>>>>>>> b17faa7d88 (Stylize error messages)
